[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.idea",
    "/screenshots",
    "/tests",
    ".gitignore" # TODO: exlude .gitignore
]

[project]
name = "fail2bangeolocation"
version = "1.0.2"
authors = [
    { name = "Rubén Hortas", email = "rubenhortas@gmail.com" },
]
description = "Shows geolocation of failed attempts registered by fail2ban"
readme = "README.md"
# license = { file = "LICENSE" } # TODO: check if this line is the issue with pypi license text
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
]

[project.scripts]
fail2bangeolocation = "fail2bangeolocation.fail2bangeolocation:main"

[project.urls]
"Homepage" = "https://github.com/rubenhortas/fail2bangeolocation"
"Bug Tracker" = "https://github.com/rubenhortas/fail2bangeolocation/issues"