[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fail2bangeolocation"
version = "2.0.5"
authors = [{ name = "Rubén Hortas", email = "rubenhortas@gmail.com" }]
description = "Shows geolocation of the IPs of the failed attempts recorded by fail2ban"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.0"
keywords = ["fail2ban", "geolocation", "network", "networking", "montitoring", "firewall", "security"]
dependencies = [
    "certifi==2024.8.*",
    "charset-normalizer==3.4.*",
    "colorama==0.4.*",
    "idna==3.10",
    "requests==2.32.*",
    "tqdm==4.66.*",
    "urllib3==2.2.*"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Firewalls"
]

[project.urls]
"Homepage" = "https://github.com/rubenhortas/fail2bangeolocation"
"Bug Tracker" = "https://github.com/rubenhortas/fail2bangeolocation/issues"

[project.scripts]
fail2bangeolocation = "fail2bangeolocation.cli:main"

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
parallel = true

